--- a/naqlah.client/src/app/Pages/admin/main-category/main-category.component.html
+++ b/naqlah.client/src/app/Pages/admin/main-category/main-category.component.html
@@ -1,5 +1,5 @@
 <div class="min-h-screen bg-neutral-50">
-  <div class="container mx-auto p-6 max-w-7xl">
+  <div class="container mx-auto max-w-7xl">
     <!-- Page Header -->
     <app-page-header [title]="'الفئات الرئيسية' | translate"
                      [subtitle]="'إدارة الفئات الرئيسية للمنتجات' | translate"
