--- a/naqlah.client/src/app/Pages/login/login.component.html
+++ b/naqlah.client/src/app/Pages/login/login.component.html
@@ -8,7 +8,7 @@
       <div class="hidden lg:flex flex-col items-center justify-center p-8">
         <div class="relative">
           <div class="absolute inset-0 bg-gradient-to-r from-blue-600/20 to-purple-600/20 rounded-full blur-3xl"></div>
-          <img src="../../../assets/images/Login.png" alt="Login Illustration" 
+          <img src="../../../assets/images/Login.svg" alt="Login Illustration" 
                class="relative z-10 max-w-full h-auto drop-shadow-2xl">
         </div>
         <div class="text-center mt-8">
@@ -24,12 +24,7 @@
           
           <!-- Header -->
           <div class="text-center mb-8">
-            <div class="inline-flex items-center justify-center w-16 h-16 bg-gradient-to-r from-blue-600 to-purple-600 rounded-full mb-4">
-              <svg class="w-8 h-8 text-white" fill="currentColor" viewBox="0 0 24 24">
-                <path d="M12 2C13.1 2 14 2.9 14 4C14 5.1 13.1 6 12 6C10.9 6 10 5.1 10 4C10 2.9 10.9 2 12 2ZM21 9V7L15 1L9 7V9C9 10.1 9.9 11 11 11V16L12 17L13 16V11C14.1 11 15 10.1 15 9V7H21Z"/>
-              </svg>
-            </div>
-            <img src="../../../assets/images/logo.svg" alt="Logo" class="h-12 mx-auto mb-4">
+            <img src="../../../assets/images/car.png" alt="Logo" class="mx-auto h-[100px] mb-4">
             <h1 class="text-2xl font-bold text-gray-800 mb-2">تسجيل الدخول</h1>
             <p class="text-gray-600">أدخل بياناتك للوصول إلى حسابك</p>
           </div>
