--- a/naqlah.client/src/app/shared/components/page-header/page-header.component.html
+++ b/naqlah.client/src/app/shared/components/page-header/page-header.component.html
@@ -1,7 +1,7 @@
 <div class="bg-white shadow-sm border-b border-neutral-200">
-  <div class="container mx-auto px-6 py-6">
-    <div class="flex items-center justify-between">
-      <div class="flex items-center space-x-4 space-x-reverse">
+  <div class="w-[100%]  p-6">
+    <div class="flex items-center justify-between ull">
+      <div class="flex items-center gap-[20px] space-x-reverse">
         <div
           class="w-12 h-12 bg-primary-500 rounded-xl flex items-center justify-center"
         >
