--- a/naqlah.client/src/app/Pages/admin/vehicle/vehicles/vehicles.component.html
+++ b/naqlah.client/src/app/Pages/admin/vehicle/vehicles/vehicles.component.html
@@ -1,5 +1,5 @@
-<div class="min-h-screen bg-neutral-50">
-  <div class="container mx-auto p-6 max-w-7xl">
+<div class="min-h-screen">
+  <div class="container mx-auto max-w-7xl">
     <!-- Page Header -->
     <app-page-header [title]="currentTabTitle | translate"
                      [subtitle]="currentTabDescription | translate"
